    - Added a heavy lube recipe for solar cells.
    - Added chemical plants 2, unlocked at P-TM science.
    - Gave burn-inators an animation.
    - Added lithium-sulfur modular batteries, which are smaller then vanadium-oxide modular batteries but hold less charge.
    - Gave a bunch more recipes producitvity.

  Changes:
    - Gave glass its own row of recipes, and moved science bottles there.
    - Changed vacuum tubes crafting time from 5 to 7 seconds, and CRT's from 20 to 28.
    - Changed the science pack requirements for Francium Ultracool Centrifugal Kabbalism, now requiring all prerequisite science packs as to lower confusion for new players.
    - Upped Magneto orbital traps glass input from 8 to 24.
    - Changed all recipes that use white phosphorous to red phosphorous, which was like 3 but still
    - Changed wiring to only need the metal and not another prerequisite item.
    - Gave big and behemoth biters fire resistance, and gave big and behemoth spitters acid/poison resistances.
    - Nerfed flamethrowers. Plus changed their usable fluids.
    - Buffed tier 4 producitvity modules to have 14% productivity instead of 12.
    - Remade molybdenite powder's icon.
    - Rerendered almost every item in the game to use HDRI's. WHERE HAVE THESE BEEN MY ENTIRE LIFE SWEET GOOGLILY
    - Changed stainless steel to also take molybdenum.
    - Changed all Multi-metals to only take their specific element and not an element + intermediate.
    - Redesigned Multi-metal item's icons.
    - Changed the crafting menu length to 12.
    - Made molten brass recipes line up with the better brass plate recipe.
    - Rebalanced TM washing/seawater washing to take 50 of each fluid, instead of 100.
    - Finally remade the fertiliser icon, and while it is what i actually wanted it to look like... mehhh? i might change it back, idk - its iconic.
    - Halved the amount of fluid needed to reform oil fractions.