@@ -25,6 +25,7 @@ Date: 2024-08-09
     - Gave burn-inators an animation.
     - Added lithium-sulfur modular batteries, which are smaller then vanadium-oxide modular batteries but hold less charge.
     - Gave a bunch more recipes producitvity.
+    - Finalised LDS's recipe (for now..)
 
   Changes:
     - Gave glass its own row of recipes, and moved science bottles there.
